# introduction-to-computer-science

./: .buildinfo  .gitignore  README.html  README.md  additional_curriculum_resources.html  bjc_video_suggestions.html  changelog.html  conf.py  contributing.html  contributing.md  csta_standards_mapping.html  curriculum_map.html  curriculum_map.md  genindex.html  glossary.html  grudgeball.html  lab_day_lesson.html  master_vocab.html  objects.inv  pyproject.toml  search.html  searchindex.js  summary.html  video_resources.html
_sources/: changelog.md.txt
helping_trios/: helping_trios.html  helping_trios_handout.html
unit_0/: do_now_04.html  do_now_05.html  lab_04.html  lab_05.html  lesson_01.html  lesson_02.html  lesson_03.html  lesson_04.html  lesson_05.html  quiz_1.html  unit_0.html  unit_0_tips.html
unit_1/: culture_day_lesson_a.html  do_now_11.html  do_now_12.html  do_now_13.html  do_now_14.html  do_now_15.html  do_now_152.html  do_now_153.html  lab_11.html  lab_12.html  lab_13.html  lab_14.html  lesson_11.html  lesson_12.html  lesson_13.html  lesson_14.html  lesson_15.html  project_1.html  unit_1.html  unit_1_tips.html
unit_2/: culture_day_lesson_b.html  do_now_21.html  do_now_22.html  do_now_22.md  do_now_23.html  do_now_24.html  do_now_25.html  do_now_26.html  lab_21.html  lab_22.html  lab_23.html  lab_24.html  lab_25.html  lesson_21.html  lesson_22.html  lesson_23.html  lesson_24.html  lesson_25.html  lesson_26.html  project_2.html  project_2_alternative.html  quiz_2.html  unit_2.html  unit_2_tips.html
unit_3/: culture_day_lesson_c.html  do_now_31.html  (+17 more)
(+46 files in other folders)
